# FS-verification-ocr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
static/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_init.py
tests/api/: __init__.py  test_dependencies.py  test_server.py
tests/core/: test_utils.py
tests/core/settings/: __init__.py  test_app_settings.py  test_init.py
tests/models/: test_responses.py  test_verification.py
tests/services/: __init__.py  test_verification_service.py  test_war_service.py
tests/services/ocr/: __init__.py  test_profile.py  test_service.py  test_shard.py
verification_ocr/: __init__.py  cli.py
verification_ocr/api/: dependencies.py  server.py
verification_ocr/core/: __init__.py  utils.py
verification_ocr/core/settings/: __init__.py  app_settings.py
verification_ocr/enums/: __init__.py  faction.py
verification_ocr/models/: __init__.py  health_response.py  image_regions.py  region.py  responses.py  verification.py  verification_response.py  war_response.py  war_state.py
verification_ocr/services/: __init__.py  verification_service.py  war_service.py
verification_ocr/services/ocr/: __init__.py  profile.py  service.py  shard.py
