[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verification-ocr"
version = "0.1.0"
description = "Verification service using OpenCV and Tesseract OCR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "opencv-python-headless>=4.8.0,<5.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
vocr = "verification_ocr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["verification_ocr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=verification_ocr",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["verification_ocr"]
branch = true
omit = [
    "verification_ocr/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 95
show_missing = true
